--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "node server.js",
     "start:watch": "nodemon server.js",
     "lint": "eslint .",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest --verbose --runInBand",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --verbose --runInBand",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/taylor-tokareff/Lab-06-GET-fake-resources-from-the-back-end.git"
+    "url": "https://github.com/taylor-tokareff/Lab-06-GET-fake-resources-from-the-back-end.git"
   },
   "keywords": [],
   "author": "",
